<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_mirror_fov_reshaper_transformation</name>
  <version>0.0.0</version>
  <description>Common transformation operations used for caluclating mirror-reflected lidar-rays</description>
  <maintainer email="devAndreas@proton.me">Andreas Loeffler</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>perception_pcl</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>